--- a/src/com/stockops/UI/MainJFrame.form
+++ b/src/com/stockops/UI/MainJFrame.form
@@ -88,7 +88,7 @@
                       <Component id="btnCommodityBroker" min="-2" pref="47" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnEquityMarketModerator" min="-2" pref="47" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnCommodityMarketModerator" min="-2" pref="47" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Component id="btnBrokersCommissionAdmin" min="-2" pref="47" max="-2" attributes="0"/>
@@ -98,7 +98,7 @@
                       <Component id="btnCompanyManager" min="-2" pref="47" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnInvestmentsManager" min="-2" pref="47" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="98" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
