--- a/src/com/stockops/UI/CompanyManger/EstablishmentModeratorJPanel.form
+++ b/src/com/stockops/UI/CompanyManger/EstablishmentModeratorJPanel.form
@@ -274,6 +274,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Industry Standards"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jToggleButton1ActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="260" y="280" width="-1" height="-1"/>
